# tidy

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  deny.toml  dist-workspace.toml  main.rs  readme.markdown  t  wordlists-to-tidy.markdown
.github/workflows/: main.yml
src/: cards.rs  dice.rs  display_information.rs  edit_distance.rs  file_readers.rs  file_writer.rs  input_validations.rs  lib.rs  list_manipulations.rs  main.rs  parsers.rs  sardinas_patterson_pruning.rs  schlinkert_pruning.rs
src/display_information/: mod.rs  uniquely_decodable.rs
tests/: edit_distance_tests.rs  ignore_tests.rs  list_information_tests.rs  list_manipulation_tests.rs  list_reading_tests.rs  parse_tests.rs  pruning_tests.rs  uniquely_decodable_tests.rs
