[package]
name = "tidy"
version = "0.3.7"
authors = ["sts10 <sschlinkert@gmail.com>"]
edition = "2021"
license = "MIT"
readme = "readme.markdown"
repository = "https://github.com/sts10/tidy"
description = "Combine and clean word lists"
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.4.2", features = ["derive"] }
memchr = "2.5.0"
radix_fmt = "1.0.0"
rand = "0.8.5"
itertools = "0.10.5"
unicode-normalization = "0.1.22"
unicode-segmentation = "1.10.1"
icu = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.5.0"
# CI backends to support
ci = ["github"]
# The installers to generate for each app
installers = []
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-unknown-linux-gnu", "aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-pc-windows-msvc"]
# Publish jobs to run in CI
pr-run-mode = "plan"
