[package]
name = "tidy"
version = "0.3.9"
authors = ["sts10 <sschlinkert@gmail.com>"]
edition = "2021"
license = "MIT"
readme = "readme.markdown"
repository = "https://github.com/sts10/tidy"
description = "Combine and clean word lists"
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
memchr = "2.7.2"
radix_fmt = "1.0.0"
rand = "0.8.5"
itertools = "0.13.0"
unicode-normalization = "0.1.23"
unicode-segmentation = "1.11.0"
icu = "1.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.14.1"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
# Publish jobs to run in CI
pr-run-mode = "plan"
# Whether to install an updater program
install-updater = false
