[package]
name = "tidy"
version = "0.3.19"
authors = ["sts10 <sschlinkert@gmail.com>"]
edition = "2024"
license = "MIT"
readme = "readme.markdown"
repository = "https://github.com/sts10/tidy"
description = "Combine and clean word lists"
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.5.18", features = ["derive"] }
memchr = "2.7.4"
radix_fmt = "1.0.0"
rand = "0.9.0"
itertools = "0.14.0"
unicode-normalization = "0.1.24"
unicode-segmentation = "1.12.0"
icu = "2.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
